src/pages/submission/statistics/SubmissionStatisticsPage.module.less
.header {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 25px !important;

  .headerDropdown {
    margin-left: 15px !important;
  }
}

.table {
  margin-bottom: 42px !important;
}

.chartContainer {
  margin-top: 20px;
  height: 250px;
}

// responsive
@media only screen and (max-width: 1023px) {
  .table {
    margin-bottom: 20px !important;
  }
}

